--- a/app/basic.html
+++ b/app/basic.html
@@ -86,6 +86,9 @@
       ga('create', 'UA-XXXXX-X', 'auto');
       ga('send', 'pageview');
     </script>
-    <!-- Built with love using Web Starter Kit -->
+
+    <script src="../scripts/adapter-latest.js"></script>
+    <script src="../scripts/common.js"></script>
+    <script src="../scripts/pc1/js/main.js"></script>
   </body>
 </html>
