Fixed path issues

--- a/app/basic.html
+++ b/app/basic.html
@@ -33,9 +33,9 @@
 
       <title>Peer connection</title>
 
-      <link rel="icon" sizes="192x192" href="../images/webrtc-icon-192x192.png">
+      <link rel="icon" sizes="192x192" href="./images/webrtc-icon-192x192.png">
       <link href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css">
-      <link rel="stylesheet" href="css/main.css" />
+      <link rel="stylesheet" href="styles/main.css" />
 
     <!-- SEO: If your mobile URL is different from the desktop URL, add a canonical link to the desktop page https://developers.google.com/webmasters/smartphone-sites/feature-phones -->
     <!--
@@ -87,8 +87,8 @@
       ga('send', 'pageview');
     </script>
 
-    <script src="../scripts/adapter-latest.js"></script>
-    <script src="../scripts/common.js"></script>
-    <script src="../scripts/pc1/js/main.js"></script>
+    <script src="./scripts/adapter-latest.js"></script>
+    <script src="./scripts/common.js"></script>
+    <script src="./scripts/pc1/js/main.js"></script>
   </body>
 </html>
