--- a/app/basic.html
+++ b/app/basic.html
@@ -87,7 +87,7 @@
       ga('send', 'pageview');
     </script>
 
-    <script src="./scripts/adapter-latest.js"></script>
+    <script src="./scripts/adapter.js"></script>
     <script src="./scripts/common.js"></script>
     <script src="./scripts/pc1/js/main.js"></script>
   </body>
